# CIEL2

./: 0_sujet.md  1_Classe_rectangle_FS.md  1_test_python.md  2_Classe_rectangle_FH.md  C_TP_logs.md  Classe2024-Copy1.ipynb  Classe2024-V2.ipynb  Classe_rectangle.md  Fichiers_Pandas.ipynb  Makefile  Pages.py  PagesV2.py  PowerShell.rtf  README.md  Sig_Mult.ipynb  TP_CI.md  TP_Etu_Projet.md  TP_sever_P1.md  Trames_Etu.ipynb  Trames_P.ipynb  biblio.drawio  cmd_doc.html  cours_jointures.md  filtrageCIEL2.ipynb  git26_Github.md  git26_bash.md  git26_vsCode.md  git_Github_tuto.md  git_bash_tuto1.md  git_vsCode_tuto.md  index.html  jointureVS.md  pooV1.md  recette.html  recette.md  table.html  tk_TP.md  uml_P1.md
.github/workflows/: c-cpp.yml
Desktop/POO_V2/: README.md
Desktop/POO_V2/partie1p/: .gitignore  CMakeLists.txt  Makefile
Desktop/POO_V2/partie1p/.github/workflows/: ci.yml
Filtre_RIF/: Filtres_RIF.ipynb  Filtres_RIF_V2.ipynb
Filtre_RII/: Filtres_RII.ipynb
Python_CIEL2_2025/: cours_Python.md  doc_venv.ipynb
Quant_Ech/: Numérisation.ipynb
TP1/: TP_F1.md
TP1/src/: app.py
TP2/: TP_F2.md
TP2/src/: app.py
TP3/: Dockerfile  TP_F3.md
TP4/: Dockerfile  TP_F4.md  docker-compose.yml  run.py
TP5/: Dockerfile  TP_F5.md  docker-compose.yml  requirements.txt  run.py
TP6/: TP_F6.md  docker-compose.yml  run.py
TP_SQL/: A2_sujet.md
Traitement_Images/: Venv.md
WebCamSocket/: README.md  index.html  script.js  server.py  style.css
simulation_rpi/: MockGPIO.py  btn.py  config_gpio.py  readme.md  serveur_alertes.py  systeme_alerte.py  test_composants.py
(+10 files in other folders)
